@@ -1,3 +1,6 @@
+2018-11-24  Markus Gans  <guru.mail@muenster.de>
+	* Improved Sun Microsystems workstation console quirks 
+
 2018-11-21  Markus Gans  <guru.mail@muenster.de>
 	* New type FKey for key inputs
 	* The integer type of FPoint and FRect changed from short to int
